--- a/deployment.yaml
+++ b/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hello-world
   namespace: default
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: hello-world
@@ -30,7 +30,7 @@ spec:
             protocol: TCP
           env:
             - name: COW_COLOR
-              value: WHITE
+              value: ORANGE
           readinessProbe:
             httpGet:
               port: web
